Images fix (#116)
* scss

* pull

* pull

* scrollbar

* cardslist

* slider

* filter

* preloader

* animations

* content

* content

* content

* -preloader

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,10 @@
 * {
   box-sizing: border-box;
 }
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+}
 
 body {
   position: relative;
@@ -24,4 +28,3 @@ body {
   padding-bottom: 5px;
   border-bottom: 1px solid rgb(134, 134, 134);
 }
-
